--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_LINK_HOME_PAGE=http://localhost:3000
-NEXT_PUBLIC_SERVICE_URL=https://fbang-in-house.dev.ftech.ai
+NEXT_PUBLIC_SERVICE_URL=http://45.124.84.152:1337
