--- a/package.json
+++ b/package.json
@@ -1,66 +1,60 @@
 {
-  "name": "ftech-web",
+  "name": "cra-redux",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "postbuild": "next-sitemap",
-    "start": "next start",
-    "start:dev": "next start -p 3104",
-    "lint": "next lint",
-    "format": "prettier --write .",
-    "precommit": "next lint",
-    "prepare": "husky install"
-  },
   "dependencies": {
-    "@react-spring/types": "^9.5.5",
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@types/react-copy-to-clipboard": "^5.0.4",
-    "@types/react-google-recaptcha": "^2.1.5",
-    "@types/react-select": "^5.0.1",
-    "@types/react-share": "^4.0.0",
-    "@types/swiper": "^6.0.0",
-    "axios": "^0.27.2",
-    "form-data": "^4.0.0",
-    "next": "12.1.5",
-    "next-seo": "^5.5.0",
-    "next-sitemap": "^3.1.22",
-    "next-useragent": "^2.8.0",
-    "qs": "^6.11.0",
-    "react": "17.0.2",
-    "react-cookie": "^4.1.1",
-    "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "17.0.2",
-    "react-fast-marquee": "^1.3.5",
-    "react-icons": "^4.4.0",
-    "react-select": "^5.4.0",
-    "react-share": "^4.4.0",
-    "react-spring": "^9.5.5",
-    "react-ticker": "^1.3.2",
-    "react-toastify": "^9.0.8",
-    "swiper": "^8.4.3"
+    "@reduxjs/toolkit": "^1.5.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.3.1",
+    "@types/redux-saga": "^0.10.5",
+    "antd": "^4.16.13",
+    "axios": "^0.23.0",
+    "connected-react-router": "^6.9.1",
+    "emoji-mart": "^3.0.1",
+    "font-awesome": "^4.7.0",
+    "history": "^4.10.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.17.4",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
+    "react-select": "^5.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "socket.io-client": "^4.3.2",
+    "toastr": "^2.1.4",
+    "typescript": "~4.1.5"
   },
-  "devDependencies": {
-    "@commitlint/cli": "^16.2.4",
-    "@commitlint/config-conventional": "^16.2.4",
-    "@types/node": "17.0.30",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "@typescript-eslint/parser": "^5.22.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.14.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-next": "12.1.5",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "^7.29.4",
-    "husky": "^8.0.0",
-    "lint-staged": "^12.4.1",
-    "postcss": "^8.4.13",
-    "prettier": "2.6.2",
-    "tailwind-scrollbar": "^2.0.1",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.4"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "dev": "set PORT=3100 && react-scripts build"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
